--- a/src/pages/home/styles.css
+++ b/src/pages/home/styles.css
@@ -13,6 +13,7 @@
 }
 
 .home h2 {
+  text-align: center;
   font-weight: 800;
   font-size: 2rem;
   color: var(--color-primary-blue);
@@ -47,7 +48,7 @@
 }
 
 .btn-panel p.text-content {
-  margin: 8px 0;
+  margin: 16px 0;
 
   font-size: 1.5rem;
   font-weight: 600;
@@ -55,7 +56,7 @@
 
 .btn-panel p.text-description {
   margin: 8px 0;
-  font-size: 0.8rem;
+  font-size: 0.7rem;
   font-weight: 300;
   text-align: left;
 
