--- a/src/main.css
+++ b/src/main.css
@@ -104,13 +104,10 @@ a {
   font-size: 2rem;
 }
 
-/* logo */
-nav.navbar-nav img {
-  margin: 10px 0px;
-}
-
-nav.navbar a.logo-link img {
-  max-width: 280px;
+@media (max-width: 1020px) {
+  .mobile-hidden {
+    display: none;
+  }
 }
 
 /* ------- END HELPERS ---------- */
@@ -124,4 +121,14 @@ body {
   font-family: Roboto, -apple-system, BlinkMacSystemFont, "Segoe UI", Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 0.9rem;
+}
+
+
+/* logo */
+nav.navbar-nav img {
+  margin: 10px 0px;
+}
+
+nav.navbar a.logo-link img {
+  max-width: 280px;
 }
