create global menu with button showMenu

--- a/src/components/header/styles.css
+++ b/src/components/header/styles.css
@@ -1,7 +1,5 @@
 .header {
   width: 100%;
-  padding: 16px;
-  box-shadow: 1px 1px 4px #888;
   background-color: #FFF;
 
   position: sticky;
@@ -9,7 +7,12 @@
   z-index: 100;
 }
 
+.menu-shadow {
+  box-shadow: 1px 1px 4px #888;
+}
+
 .header-container {
+  padding: 16px;
   display: flex;
   align-items: center;
   justify-content: space-between;
