--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,4 @@
 .App {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  min-height: 100vh;
+  position: relative;
 }
