--- a/src/pages/home/styles.css
+++ b/src/pages/home/styles.css
@@ -1,15 +1,15 @@
 .home {
   width: 100%;
   max-width: 1200px;
-  min-height: calc(100vh - 120px);
-  padding: 64px 16px;
+  margin: 0 auto;
+  padding: 80px 16px 180px;
   border-radius: 16px;
 
   display: flex;
-  gap: 64px;
   flex-direction: column;
   align-items: center;
   justify-content: start;
+  gap: 64px;
 }
 
 .home h2 {
@@ -60,4 +60,10 @@
   font-weight: 300;
   text-align: left;
 
+}
+
+@media (max-width:1020px) {
+  .home {
+    padding: 80px 16px 280px;
+  }
 }
